@@ -514,7 +514,7 @@ static void drop(int x, int y, int b)
 		return;
 	}
 
-	stack_drop(dest_stack, last_n);
+	stack_drop(dest_stack, last_n, 0);
 
 	while (auto_move())
 		;
