@@ -467,7 +467,7 @@ drop(int x, int y, int b)
     return;
   }
   clear_arrows();
-  stack_drop(dest_stack, last_n);
+  stack_drop(dest_stack, last_n, 0);
   check_for_end_of_game();
   set_arrows();
 }
