@@ -1,5 +1,10 @@
 2013-01-12  Esa Peuha  <esa.peuha@gmail.com>
 
+	* lib/stack.c (stack_drop): Add parameter.
+	* lib/cards.h: Change declaration.
+	* docs/toolkit.html: Document it.
+	* games/canfield.c, games/freecell.c, games/solitaire.c,
+	  games/spider.c, games/thornq.c, tests/test5.c: Update.
 	* lib/stack.c (stack_animate): Add parameter.
 	* lib/cards.h: Change declaration.
 	* docs/toolkit.html: Document it.
